List user relation

--- a/Todo/templates/todo/index.html
+++ b/Todo/templates/todo/index.html
@@ -112,7 +112,7 @@
 		<div class="col-sm-4 p-0 mt-5 ml-auto">
 			<div class = ' bg-light'>
 				 	<div class="container-fluid bg-info text-light">
-				 		<p class = "h1 text-center p-1">Todo</p>
+				 		<p class = "h1 text-center p-1">{{ user.username|upper }}</p>
 				 	</div>
 				 	<div class = "container">
 				 		<p class="text-center text-success my-3">Add to Todo list.</p>
